A mojor update to the web GUI, unfortunately all done in one go. Nevertheless, here it is, and has many improvements to the christmas edition commited in december:
- the GUI now uses a sqlite3 database for storage, so all configuratons are stored
- aggregated statistics for groups
- graphs on demand for raw data
- CSV export of stat data
- 'Restricted mode' to get a web GUI which prevent you from doing changes
- logging of changes performed in the GUI
- generall minor improvements in the GUI

Additional perl module dependencies are Algorithm::Diff and DBD::Sqlite3

A proper documentation will appear on the wiki in a couple of days to describe all that can be done with the web GUI. 



git-svn-id: http://varnish-cache.org/svn/trunk@3786 d4fa192b-c00b-0410-8231-f00ffab90ce4

--- a/varnish-tools/webgui/README
+++ b/varnish-tools/webgui/README
@@ -1,28 +1,15 @@
-Web GUI for Varnish, very limited christmas edition
-===================================================
-
-This is a preview of the upcoming web GUI for Varnish, which will be released with version 2.1 It has most of the features intended for the final version, but a number of things are still missing, so it is just inteded to get feedback. The following known things are _not_ implemented
- - saving of state: if the web server goes down, the information is lost.
- - smart data collection: it stores ALL the polled data with the given poll intervlal. It does not truncate data used for the hour, day, week and month graph. So eventually you will go out of memory. 
- - simple configuration: currently, you must edit the start.pl script by hand to set the configuration, and edit Varnish/RequestHandler.pl to add graphs and summary statistics. 
- - security: there is no form for access control or security implemented.
-
-So I wouldn't use it for anything with 'prod' in its name, but as a preview of what is to come. It should be noted that when adding nodes to an existing group, all the parameters and VCL of that node are replaced with the default parameters and VCL of the group. So if you add more nodes to a group, be aware of this.
-
-Any feedback is most welcome, so just post it to varnish-misc@projects.linpro.no.
-
-So what can you actually do with this thing?
-
+Web GUI for Varnish
+===================
 
 Overview
 --------
 
 The web GUI is written in Perl and runs in its own server container, so a web server is not required, only the necessary Perl modules. The GUI consists of five sections: 'View stats', 'Configure parameters', 'Edit VCL', 'Node management' and 'Management console'. As the names might suggest, the GUI let you
 
-- view statistics from the Varnish nodes
-- configure the parameters of the Varnish nodes and clusters
-- edit the VCL for each cluster, which will be shared between all the nodes
-- perform node management, like adding clusters and nodes, get the state of the nodes and backend healths
+- view statistics and graphs from the Varnish nodes
+- configure the parameters of the Varnish nodes and groups
+- edit the VCL for each group, which will be shared between all the nodes, and the standalone nodes
+- perform node management, like adding groups and nodes, get the state of the nodes and backend healths, starting groups and nodes, stopping etc.
 - get access to the management console of each node
 
 Requirements
@@ -34,6 +21,9 @@ The web GUI is written in Perl, and uses some modules that might not be installe
 - HTML::Template (libhtml-template-perl)
 - GD::Graph (libgd-graph-perl) 
 - LWP::UserAgent (libwww-perl)
+- Algorithm::Diff (libalgorithm-diff-perl)
+- DBD::Sqlite3 (libdbd-sqlite3-perl)
+
 
 The name in the paranthesis are the package name on a standard Ubuntu system. The rest of the modules should be pretty standard.
 
@@ -44,12 +34,13 @@ $ /opt/varnish/sbin/varnishd -a :80 -b :8080 -T :9003
 Configuration
 -------------
 
-The configuration is done directly in the Perl code for this very limited christmas edition, but will be more userfriendly in the final version. As this version doesn't save your state, e.g. the nodes and clusters added, I would recommend adding this in the start.pl. The files needing customisation are
+The configuration is done directly in start.pl, which let you set listening port, names of log files and database files etc. It is all well documented in the file.
 
-- start.pl: early in the file you'll see '# Configuration starts here', and this is where to set the config. It is all commented, so should be fairly straight forward.
-- Varnish/RequestHandler.pl: this is the main enging of the whole web GUI, including the parts creating the summary stats and graphs. This is well documented in the code, so look at line 380 for adding values to the summary statistics and 826 for adding custom graphs (and removing the dummy 'Missing graph').
+Before using it, you must create a sqlite3 database. This can be done by issuing
 
-That is configuration for this version. Remember that when creating and editing VCLs, the information is stored on the node, so if the web server is restarted, the nodes will still have the VCLs (unless they are restarted too, of course).
+$ sqlite3 varnish.db < varnish_webgui.sql
+
+Change varnish.db to the name of the file you set in the config file.
 
 Starting it
 -----------
@@ -62,17 +53,17 @@ The GUI
 View stats
 ----------
 
-In 'View stats' you will see statistics gathered from the nodes. The 'Summary statistics' is/will be customisable (see Configuration) and shows the most important statistics. If you want to see all the statistics from the Varnish nodes you turn 'Raw statistics' on. If you want the page to be refreshed automatically in order to follow the graph 'live', you can turn 'Auto refresh' on. The refresh rate is the same as the rate the statistics are collected from the nodes.
+In 'View stats' you will see graphs and statistics gathered from the groups and nodes. The 'Summary statistics' shows the most important statistics, but if you want to see all the statistics from the Varnish nodes you turn 'Raw statistics' on. If you want the page to be refreshed automatically in order to follow the graph 'live', you can turn 'Auto refresh' on. The refresh rate is the same as the rate the statistics are collected from the nodes. If you want to export the raw data as CSV, use the 'Raw data as CSV' link.
 
 Configure parameters
 --------------------
 
-'Configure' parameters let you configure the parameters for a group (cluster) or a single node. For this version, the parameters for the groups are a copy of the parameters of the first node added to the group, so if a group has not been populated, it will not contain any values. Changing a value in a group will change the same value of all the nodes in that group. Changing a value for node only changes that node, naturally. 
+'Configure' parameters let you configure the parameters for a group or a single node. Changing a value in a group will change the same value of all the nodes in that group. Changing a value for node only changes that node, naturally. 
 
 Edit VCL
 --------
 
-'Edit VCL' lets you edit the VCL of the group, and any changes made here will be reflected on all the nodes of the group. You can add, edit, save and discard VCLs as well as making a VCL active. It discards without warning (isn't baby safe yet), so be carefull.
+'Edit VCL' lets you edit the VCL of a group or standalone node, and any changes made here will be reflected on all the nodes of the group. You can add, edit, save and discard VCLs as well as making a VCL active.
 
 A note about the editor: it is a simple text are, with <tab> giving you an indent as expected. If you save a VCL with error, the errors are listed and you can click on the 'Line X Pos Y' information in the error list to jump to that position in the editor.
 
@@ -86,9 +77,7 @@ From 'Node management' you can manage groups and nodes. It will let you add, rem
 
  If a health probe is defined in the VCL, a list of backend healths for the running VCL is shown as well.
 
- Since this version does not let you save the configuration, it is recommended that you add groups and nodes in the stat.pl file as explained in Configuration.
-
- WARNING: as noted earlier, adding nodes to a group will replace that nodes parameter and VCL.
+WARNING: Adding nodes to a group, or changing the group of a node,  will replace that nodes parameter and VCL.
 
 Management console
 ------------------
@@ -96,12 +85,3 @@ Management console
 'Management console' gives you access to the management console of each node. The input field has magical tab completion for the CLI commands and a command history accessable by arrow up/down. In addition to the standard CLI commands, 'cls' can be issued to clear the console.
 
 The color and size of the console can be changed, but this information is unfortunately not stored when switching nodes.
-
-
-Road ahead
-==========
-
-This is a sneak preview of the web GUI for 2.1, and as such is not complete. It is mostly feature complete (minus things mentioned in the start of this file), so any comments on what is working, what is lacking etc. is most appreciated. Please use the varnish-misc@projects.linpro.no mailing list for discussion.
-
-
-Merry christmas!
